Fix range background on IE11

--- a/src/components/Range.css
+++ b/src/components/Range.css
@@ -52,6 +52,7 @@ input[type='range'] {
     width: var(--theoplayer-range-track-width, 100%); /* Specific width is required for Firefox. */
 
     box-sizing: border-box;
+    position: relative;
     padding: 0;
     margin: 0;
 }
